{
  "version": 4,
  "terraform_version": "1.4.5",
  "serial": 183,
  "lineage": "72ca14ee-2cb1-d619-f884-3d59a3e05f23",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway",
      "name": "public_internal_tgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "amazon_side_asn": 64512,
            "arn": "arn:aws:ec2:eu-north-1:987373494809:transit-gateway/tgw-0b6fbce9480d6884e",
            "association_default_route_table_id": "tgw-rtb-089bac7532cd21aff",
            "auto_accept_shared_attachments": "disable",
            "default_route_table_association": "enable",
            "default_route_table_propagation": "enable",
            "description": "Internal/Public gateway",
            "dns_support": "enable",
            "id": "tgw-0b6fbce9480d6884e",
            "multicast_support": "disable",
            "owner_id": "987373494809",
            "propagation_default_route_table_id": "tgw-rtb-089bac7532cd21aff",
            "vpn_ecmp_support": "enable"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "public_internal_tgw_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-04e11ce51a64e5195",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-02c6df8d3013db622",
              "subnet-0d6b823475fc015ef"
            ],
            "tags": {
              "Name": "internal_tgw"
            },
            "tags_all": {
              "Name": "internal_tgw"
            },
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-0b6fbce9480d6884e",
            "vpc_id": "vpc-0eebf0eb8c84c88c8",
            "vpc_owner_id": "987373494809"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.public_internal_tgw",
            "aws_subnet.internal_subnet_01",
            "aws_subnet.internal_subnet_02",
            "aws_vpc.vpc_internal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "public_internal_tgw_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-020c51f3bc1ee6b21",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-03d6088f18a4012ea",
              "subnet-0c59418e77034a22e"
            ],
            "tags": {
              "Name": "public_tgw"
            },
            "tags_all": {
              "Name": "public_tgw"
            },
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-0b6fbce9480d6884e",
            "vpc_id": "vpc-06fdb70c8c9d6a8e9",
            "vpc_owner_id": "987373494809"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.public_internal_tgw",
            "aws_subnet.public_subnet_01",
            "aws_subnet.public_subnet_02",
            "aws_vpc.vpc_public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0989fb15ce71ba39e",
            "arn": "arn:aws:ec2:eu-north-1:987373494809:instance/i-0946d131818c1419a",
            "associate_public_ip_address": false,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0946d131818c1419a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "docs.bob.frl",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c821e02098adea03",
            "private_dns": "ip-10-0-1-22.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.22",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00370bf8878d4c0d1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d6b823475fc015ef",
            "tags": {
              "Name": "bastion"
            },
            "tags_all": {
              "Name": "bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0943d03ad271a0861"
            ]
          },
          "dependencies": [
            "aws_security_group.vpc_internal_ssh",
            "aws_subnet.internal_subnet_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_host_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0989fb15ce71ba39e",
            "arn": "arn:aws:ec2:eu-north-1:987373494809:instance/i-08a64e92f8cb2099c",
            "associate_public_ip_address": false,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08a64e92f8cb2099c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03bbc6c650a98d511",
            "private_dns": "ip-10-0-1-5.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.5",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05705767eefbcf4e4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d6b823475fc015ef",
            "tags": {
              "Name": "web_host_01"
            },
            "tags_all": {
              "Name": "web_host_01"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0943d03ad271a0861"
            ]
          },
          "dependencies": [
            "aws_security_group.vpc_internal_ssh",
            "aws_subnet.internal_subnet_01",
            "aws_vpc.vpc_internal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_host_02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0989fb15ce71ba39e",
            "arn": "arn:aws:ec2:eu-north-1:987373494809:instance/i-090cb6d3b7b32dea1",
            "associate_public_ip_address": false,
            "availability_zone": "eu-north-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-090cb6d3b7b32dea1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e1a285b47569361b",
            "private_dns": "ip-10-0-2-5.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.5",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0eb5865aba356c37b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02c6df8d3013db622",
            "tags": {
              "Name": "web_host_02"
            },
            "tags_all": {
              "Name": "web_host_02"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0943d03ad271a0861"
            ]
          },
          "dependencies": [
            "aws_security_group.vpc_internal_ssh",
            "aws_subnet.internal_subnet_02",
            "aws_vpc.vpc_internal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vpc_public_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:987373494809:internet-gateway/igw-01eadfc76cb6104c3",
            "id": "igw-01eadfc76cb6104c3",
            "owner_id": "987373494809",
            "tags": {
              "Name": "public_igw"
            },
            "tags_all": {
              "Name": "public_igw"
            },
            "vpc_id": "vpc-06fdb70c8c9d6a8e9"
          },
          "dependencies": [
            "aws_vpc.vpc_public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "nlb_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:987373494809:loadbalancer/net/docs-bob-frl-internal-http/d8a25066d30c8301",
            "arn_suffix": "net/docs-bob-frl-internal-http/d8a25066d30c8301",
            "dns_name": "docs-bob-frl-internal-http-d8a25066d30c8301.elb.eu-north-1.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:eu-north-1:987373494809:loadbalancer/net/docs-bob-frl-internal-http/d8a25066d30c8301",
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "docs-bob-frl-internal-http",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02c6df8d3013db622"
              },
              {
                "subnet_id": "subnet-0d6b823475fc015ef"
              }
            ],
            "subnets": [
              "subnet-02c6df8d3013db622",
              "subnet-0d6b823475fc015ef"
            ],
            "tags": {
              "Name": "nlb_internal"
            },
            "tags_all": {
              "Name": "nlb_internal"
            },
            "vpc_id": "vpc-0eebf0eb8c84c88c8",
            "zone_id": "Z1UDT6IFJ4EJM"
          },
          "dependencies": [
            "aws_subnet.internal_subnet_01",
            "aws_subnet.internal_subnet_02",
            "aws_vpc.vpc_internal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "nlb_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:987373494809:loadbalancer/net/docs-bob-frl-public-gateway/f7faa35b1a4720ce",
            "arn_suffix": "net/docs-bob-frl-public-gateway/f7faa35b1a4720ce",
            "dns_name": "docs-bob-frl-public-gateway-f7faa35b1a4720ce.elb.eu-north-1.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:eu-north-1:987373494809:loadbalancer/net/docs-bob-frl-public-gateway/f7faa35b1a4720ce",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "docs-bob-frl-public-gateway",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03d6088f18a4012ea"
              },
              {
                "subnet_id": "subnet-0c59418e77034a22e"
              }
            ],
            "subnets": [
              "subnet-03d6088f18a4012ea",
              "subnet-0c59418e77034a22e"
            ],
            "vpc_id": "vpc-06fdb70c8c9d6a8e9",
            "zone_id": "Z1UDT6IFJ4EJM"
          },
          "dependencies": [
            "aws_subnet.public_subnet_01",
            "aws_subnet.public_subnet_02",
            "aws_vpc.vpc_public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nlb_internal_listener_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:987373494809:listener/net/docs-bob-frl-internal-http/d8a25066d30c8301/3388845f51428499",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:987373494809:targetgroup/tg-internal-http/9692f2d83b014b13",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:987373494809:listener/net/docs-bob-frl-internal-http/d8a25066d30c8301/3388845f51428499",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-north-1:987373494809:loadbalancer/net/docs-bob-frl-internal-http/d8a25066d30c8301",
            "port": 80,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {
              "Name": "nlb_internal_listener_http"
            },
            "tags_all": {
              "Name": "nlb_internal_listener_http"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.nlb_internal",
            "aws_lb_target_group.tg_internal_http",
            "aws_subnet.internal_subnet_01",
            "aws_subnet.internal_subnet_02",
            "aws_vpc.vpc_internal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nlb_public_listener_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:987373494809:listener/net/docs-bob-frl-public-gateway/f7faa35b1a4720ce/d2325d34da08396b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:987373494809:targetgroup/tg-public-ssh/d608544be6cb32f5",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:987373494809:listener/net/docs-bob-frl-public-gateway/f7faa35b1a4720ce/d2325d34da08396b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-north-1:987373494809:loadbalancer/net/docs-bob-frl-public-gateway/f7faa35b1a4720ce",
            "port": 22,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {
              "Name": "nlb_public_listener_ssh"
            },
            "tags_all": {
              "Name": "nlb_public_listener_ssh"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.nlb_public",
            "aws_lb_target_group.tg_public_ssh",
            "aws_subnet.public_subnet_01",
            "aws_subnet.public_subnet_02",
            "aws_vpc.vpc_public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg_internal_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:987373494809:targetgroup/tg-internal-http/9692f2d83b014b13",
            "arn_suffix": "targetgroup/tg-internal-http/9692f2d83b014b13",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:987373494809:targetgroup/tg-internal-http/9692f2d83b014b13",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-internal-http",
            "port": 80,
            "preserve_client_ip": "false",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0eebf0eb8c84c88c8"
          },
          "dependencies": [
            "aws_vpc.vpc_internal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg_public_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:987373494809:targetgroup/tg-public-ssh/d608544be6cb32f5",
            "arn_suffix": "targetgroup/tg-public-ssh/d608544be6cb32f5",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:987373494809:targetgroup/tg-public-ssh/d608544be6cb32f5",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-public-ssh",
            "port": 22,
            "preserve_client_ip": "false",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "Name": "public_ssh_tg"
            },
            "tags_all": {
              "Name": "public_ssh_tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-06fdb70c8c9d6a8e9"
          },
          "dependencies": [
            "aws_vpc.vpc_public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "tga_internal_http_host_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-north-1:987373494809:targetgroup/tg-internal-http/9692f2d83b014b13-20230529133159923400000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:987373494809:targetgroup/tg-internal-http/9692f2d83b014b13",
            "target_id": "10.0.1.5"
          },
          "dependencies": [
            "aws_lb_target_group.tg_internal_http",
            "aws_vpc.vpc_internal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "tga_internal_http_host_02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-north-1:987373494809:targetgroup/tg-internal-http/9692f2d83b014b13-20230529133159954200000006",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:987373494809:targetgroup/tg-internal-http/9692f2d83b014b13",
            "target_id": "10.0.2.5"
          },
          "dependencies": [
            "aws_lb_target_group.tg_internal_http",
            "aws_vpc.vpc_internal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "tga_public_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "availability_zone": "eu-north-1a",
            "id": "arn:aws:elasticloadbalancing:eu-north-1:987373494809:targetgroup/tg-public-ssh/d608544be6cb32f5-20230529133158967600000004",
            "port": 22,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:987373494809:targetgroup/tg-public-ssh/d608544be6cb32f5",
            "target_id": "10.0.1.22"
          },
          "dependencies": [
            "aws_lb_target_group.tg_public_ssh",
            "aws_vpc.vpc_public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "internal_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:987373494809:route-table/rtb-0429ade8b747ebbbc",
            "id": "rtb-0429ade8b747ebbbc",
            "owner_id": "987373494809",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0b6fbce9480d6884e",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "internal_rt"
            },
            "tags_all": {
              "Name": "internal_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eebf0eb8c84c88c8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.public_internal_tgw",
            "aws_vpc.vpc_internal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:987373494809:route-table/rtb-0bf817b2b4d8ba956",
            "id": "rtb-0bf817b2b4d8ba956",
            "owner_id": "987373494809",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01eadfc76cb6104c3",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.1.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0b6fbce9480d6884e",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.2.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0b6fbce9480d6884e",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_rt"
            },
            "tags_all": {
              "Name": "public_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-06fdb70c8c9d6a8e9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.public_internal_tgw",
            "aws_internet_gateway.vpc_public_igw",
            "aws_vpc.vpc_public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "internal_subnet_01_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03416e6d58750f26b",
            "route_table_id": "rtb-0429ade8b747ebbbc",
            "subnet_id": "subnet-0d6b823475fc015ef"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.public_internal_tgw",
            "aws_route_table.internal_rt",
            "aws_subnet.internal_subnet_01",
            "aws_vpc.vpc_internal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "internal_subnet_02_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-083fa60c8d9f13c14",
            "route_table_id": "rtb-0429ade8b747ebbbc",
            "subnet_id": "subnet-02c6df8d3013db622"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.public_internal_tgw",
            "aws_route_table.internal_rt",
            "aws_subnet.internal_subnet_02",
            "aws_vpc.vpc_internal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_01_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03084c24c1da51765",
            "route_table_id": "rtb-0bf817b2b4d8ba956",
            "subnet_id": "subnet-0c59418e77034a22e"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.public_internal_tgw",
            "aws_internet_gateway.vpc_public_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet_01",
            "aws_vpc.vpc_public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_02_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d3f91e543053d628",
            "route_table_id": "rtb-0bf817b2b4d8ba956",
            "subnet_id": "subnet-03d6088f18a4012ea"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.public_internal_tgw",
            "aws_internet_gateway.vpc_public_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet_02",
            "aws_vpc.vpc_public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_internal_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:987373494809:security-group/sg-0943d03ad271a0861",
            "description": "Internal SSH Access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0943d03ad271a0861",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "vpc_internal_ssh",
            "name_prefix": "",
            "owner_id": "987373494809",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0eebf0eb8c84c88c8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_internal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_public_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:987373494809:security-group/sg-09915b27bb332b576",
            "description": "Public SSH Access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09915b27bb332b576",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "vpc_public_ssh",
            "name_prefix": "",
            "owner_id": "987373494809",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06fdb70c8c9d6a8e9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "internal_subnet_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:987373494809:subnet/subnet-0d6b823475fc015ef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d6b823475fc015ef",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "987373494809",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "internal_subnet_01"
            },
            "tags_all": {
              "Name": "internal_subnet_01"
            },
            "vpc_id": "vpc-0eebf0eb8c84c88c8"
          },
          "dependencies": [
            "aws_vpc.vpc_internal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "internal_subnet_02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:987373494809:subnet/subnet-02c6df8d3013db622",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02c6df8d3013db622",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "987373494809",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "internal_subnet_02"
            },
            "tags_all": {
              "Name": "internal_subnet_02"
            },
            "vpc_id": "vpc-0eebf0eb8c84c88c8"
          },
          "dependencies": [
            "aws_vpc.vpc_internal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:987373494809:subnet/subnet-0c59418e77034a22e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "172.30.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c59418e77034a22e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "987373494809",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_01"
            },
            "tags_all": {
              "Name": "public_subnet_01"
            },
            "vpc_id": "vpc-06fdb70c8c9d6a8e9"
          },
          "dependencies": [
            "aws_vpc.vpc_public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:987373494809:subnet/subnet-03d6088f18a4012ea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "172.30.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03d6088f18a4012ea",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "987373494809",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_02"
            },
            "tags_all": {
              "Name": "public_subnet_02"
            },
            "vpc_id": "vpc-06fdb70c8c9d6a8e9"
          },
          "dependencies": [
            "aws_vpc.vpc_public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:987373494809:vpc/vpc-0eebf0eb8c84c88c8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0dcddfaa4987067b5",
            "default_route_table_id": "rtb-0be8363cce5d07a4e",
            "default_security_group_id": "sg-052dc17d16e6e0b62",
            "dhcp_options_id": "dopt-039e3f2e9f3880ffc",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0eebf0eb8c84c88c8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0be8363cce5d07a4e",
            "owner_id": "987373494809",
            "tags": {
              "Name": "vpc_internal"
            },
            "tags_all": {
              "Name": "vpc_internal"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:987373494809:vpc/vpc-06fdb70c8c9d6a8e9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.30.0.0/16",
            "default_network_acl_id": "acl-08e5b17d495f3ceab",
            "default_route_table_id": "rtb-0d07903e15dc7ba32",
            "default_security_group_id": "sg-0a4fa57455a17ce9f",
            "dhcp_options_id": "dopt-039e3f2e9f3880ffc",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06fdb70c8c9d6a8e9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d07903e15dc7ba32",
            "owner_id": "987373494809",
            "tags": {
              "Name": "vpc_public"
            },
            "tags_all": {
              "Name": "vpc_public"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "sg_internal_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:987373494809:security-group-rule/sgr-05f183dac8740c867",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-05f183dac8740c867",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0943d03ad271a0861",
            "security_group_rule_id": "sgr-05f183dac8740c867",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.vpc_internal_ssh",
            "aws_vpc.vpc_internal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "sg_public_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:987373494809:security-group-rule/sgr-0b9827028f8785e7a",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0b9827028f8785e7a",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-09915b27bb332b576",
            "security_group_rule_id": "sgr-0b9827028f8785e7a",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.vpc_public_ssh",
            "aws_vpc.vpc_public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "sg_internal_ingress_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:987373494809:security-group-rule/sgr-0b58d0a734d8867e2",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0b58d0a734d8867e2",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0943d03ad271a0861",
            "security_group_rule_id": "sgr-0b58d0a734d8867e2",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.vpc_internal_ssh",
            "aws_vpc.vpc_internal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "sg_public_ingress_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:987373494809:security-group-rule/sgr-0fd9f7fec643015b7",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0fd9f7fec643015b7",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-09915b27bb332b576",
            "security_group_rule_id": "sgr-0fd9f7fec643015b7",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.vpc_public_ssh",
            "aws_vpc.vpc_public"
          ]
        }
      ]
    }
  ]
}